# heroch

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
heroch/: __init__.py  tensor.py
heroch/nn/: __init__.py  activations.py  linear.py  loss.py  module.py
heroch/optim/: optimizer.py  sgd.py
tests/: test_heroch.py
